--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postprocessing": "^6.38.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-pdf": "^10.2.0",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2"
   },
